--- a/results/2_Maze_Neutrality/MAZE_Analysis.Rmd
+++ b/results/2_Maze_Neutrality/MAZE_Analysis.Rmd
@@ -62,6 +62,11 @@ library(reshape2)
 source("helpers.R")
 ```
 
+```{r}
+theme_set(theme_minimal())
+```
+
+
 ## Reading in the Data
 In the first instance, we need to read in the data, which has been pre-merged from both runs of the experiment. We will also in this chunk filter out all of the example trials, as well as all the data points that are from non-critical trials. 
 
@@ -72,12 +77,12 @@ all_data <- read.csv('merged_all.csv') %>%
 ```
 
 ## Running Exclusion Criteria
-Now, we want to exclude any participants who failed to answer at least 85% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 85% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
+Now, we want to exclude any participants who failed to answer at least 80% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 80% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
 
 ```{r}
 exclusion <- all_data %>% group_by(workerid) %>%
   summarise(accuracy = mean(response_correct)) %>%
-  mutate(exclude = ifelse(accuracy < 0.85,'Yes','No')) %>% 
+  mutate(exclude = ifelse(accuracy < 0.80,'Yes','No')) %>% 
   filter(exclude == 'Yes')
 
 all_data <- all_data[!(all_data$workerid %in% exclusion$workerid),] %>%
@@ -410,7 +415,7 @@ compounds_only <- compounds_only %>%
 ```
 
 ```{r}
-compound_model <- lmer(resid_rt~ctrial_congruency*ctrial_gender*cgender_total + (1|workerid) + (1|lexeme) + (1|name),data = compounds_only)
+compound_model <- lmer(resid_rt~ctrial_congruency*ctrial_gender*cgender_total + (1|workerid) + (1|lexeme),data = compounds_only)
 ```
 
 ```{r}
@@ -460,7 +465,7 @@ summary(complex_model)
 ## Gender Total
 
 ```{r}
-ideology_model <- lmer(resid_rt~ctrial_congruency*ctrial_gender*cgender_link + (1|workerid) + (1|lexeme) + (1|name), data=all_data)
+ideology_model <- lmer(resid_rt~ctrial_congruency*ctrial_gender*cgender_link + (1|workerid) + (1|lexeme), data=all_data)
 ```
 
 ```{r}
@@ -521,6 +526,7 @@ all_data %>%
 ```{r}
 all_data %>%
   filter(!is.na(subject_information.gender)) %>%
+  filter(subject_information.gender != '') %>%
   group_by(subject_information.gender) %>%
   summarize(MeanGenderTotal = mean(gender_total)) %>%
   ggplot(aes(x=subject_information.gender, y=MeanGenderTotal)) + 
@@ -530,3 +536,18 @@ all_data %>%
 ```
 
 Rscript merge_results.R maze_task_1-merged.csv dems maze_task_2-merged.csv reps
+
+```{r}
+all_data %>%
+  group_by(condition,trial_gender) %>%
+  filter(trial_no < 11) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender)) + 
+  geom_point(size=3) + 
+  geom_jitter(data = agg_speaker_mean_con, aes(y=MeanRT),alpha=.1,color='darkred') + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  scale_color_manual(values = inauguration_2021) + 
+  theme_minimal()
+```
+
