--- a/talks_and_papers/qp_paper/qp1.bib
+++ b/talks_and_papers/qp_paper/qp1.bib
@@ -172,3 +172,67 @@
 	year={2012},
 	publisher={Verlag Hans Huber}
 }
+
+@article{gygax2008can,
+	title={Can a group of musicians be composed of women? Generic interpretation of French masculine role names in the absence and presence of feminine forms},
+	author={Gygax, Pascal and Gabriel, Ute},
+	journal={Swiss Journal of Psychology},
+	volume={67},
+	number={3},
+	pages={143--151},
+	year={2008},
+	publisher={Verlag Hans Huber}
+}
+
+@article{misersky2014norms,
+	title={Norms on the gender perception of role nouns in Czech, English, French, German, Italian, Norwegian, and Slovak},
+	author={Misersky, Julia and Gygax, Pascal M and Canal, Paolo and Gabriel, Ute and Garnham, Alan and Braun, Friederike and Chiarini, Tania and Englund, Kjellrun and Hanulikova, Adriana and {\"O}ttl, Anton and others},
+	journal={Behavior research methods},
+	volume={46},
+	number={3},
+	pages={841--871},
+	year={2014},
+	publisher={Springer}
+}
+
+@misc{prolific,
+	title={Prolific},
+	publisher={Prolific},
+	year={2014},
+	city={Oxford, UK},
+	url={https://www.prolific.co}
+}
+
+ @misc{kelly2018, 
+ 	title={Gender-neutral suggestions for the top 25 job titles that still use the word ``man"}, url={https://blog.ongig.com/diversity-and-inclusion/gender-neutral-job-titles/}, 
+ 	journal={Ongig Blog}, 
+ 	publisher={Ongig},
+ 	 author={Kelly, Rob}, 
+ 	 year={2018}, 
+ 	 month={Feb}
+ } 
+
+@inproceedings{hilton2022,
+	title={Gender Bias in Perceiving Interruptions},
+	author={Hilton, Katherine Marie},
+	year={2022},
+	booktitle={Linguistic Society of America 2022 Annual Meeting}
+}
+
+ @misc{charalambides_2021, 
+ 	title={We recently went viral ON TikTok - Here's what we learned}, url={https://blog.prolific.co/we-recently-went-viral-on-tiktok-heres-what-we-learned/}, 
+ 	journal={Prolific}, 
+ 	publisher={Prolific}, 
+ 	author={Charalambides, Nick}, 
+ 	year={2021}, 
+ 	month={Aug}
+} 
+
+@misc{sarahndom,
+	title={i’m excited for this series!!},
+	url={https://www.tiktok.com/foryou?lang=en&is_copy_url=1&is_from_webapp=v1},
+	author={@sarahndom},
+	year={2021},
+	month={July},
+	date={24}
+}
