--- a/results/3_Production/production_analysis.Rmd
+++ b/results/3_Production/production_analysis.Rmd
@@ -333,3 +333,27 @@ gender_data <- crit_data %>%
 ```{r}
 prop.table(table(gender_data$gender,gender_data$poli_party))
 ```
+
+```{r}
+cons_text <- textGrob("Conservative", gp=gpar(fontsize=10, fontface="bold"))
+lib_text <- textGrob("Liberal", gp=gpar(fontsize=10, fontface="bold"))
+```
+
+```{r}
+labels = data.frame(Label=c("conservative","liberal"),Y=c(.1,70))
+crit_data %>%
+  filter(subject_information.gender != "") %>%
+  ggplot(aes(x=subject_information.gender, y=gender_total)) + 
+  geom_boxplot() + 
+  geom_text(data=labels,aes(label=Label,y=Y),x=0.3) +
+  theme_minimal() + 
+  labs(x="Participant Gender", y="Gender Ideology Score") + 
+  theme(plot.margin = unit(c(1,1,2,1), "lines")) +
+  # annotation_custom(cons_text,xmin=.5,xmax=.5,ymin=75,ymax=75) + 
+  # annotation_custom(lib_text,xmin=.5,xmax=.5,ymin=0,ymax=0) + 
+  coord_cartesian(clip = "off")
+```
+
+```{r}
+ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper",filename="prod_ideo_pure.png")
+```
