--- a/results/norming_study_one/norming_analysis_r.Rmd
+++ b/results/norming_study_one/norming_analysis_r.Rmd
@@ -9,6 +9,7 @@ library(ggplot2)
 library(dplyr)
 library(data.table)
 library(formattable)
+library(grid)
 ```
 
 # Data Read-ins
@@ -19,7 +20,7 @@ library(formattable)
 This reads in the .csv file with the data from all 4,000 trials:
 
 ```{r}
-trials <- read.csv("gender_titles-trials.csv")
+trials <- read.csv("gender_titles-merged.csv")
 ```
 
 This will filter out example trials + the respondent who reported not understanding: 
@@ -62,8 +63,16 @@ And exclude those participants whose ratings fall outwith the exclusion criterio
 ```{r}
 usable_trials <- trials_final %>%
   filter(workerid!=17 & workerid!=35 & workerid!=54 & workerid!=57 & workerid!=68 & workerid!=69 & workerid!=72 & workerid!=86 & workerid!=89 & workerid != 107 & workerid != 111) %>%
-  mutate(orthog = ifelse(orthog=="sroceress","sorceress",orthog)) 
-  
+  mutate(orthog = ifelse(orthog=="sroceress","sorceress",orthog)) %>%
+  mutate(id = ifelse(id=="Stunt_double","Stunt double",id)) %>%
+  mutate(id = ifelse(id=="Restaurant_server","Restaurant server",id)) %>%
+  mutate(id = ifelse(id=="Police_officer","Police officer",id)) %>%
+  mutate(id = ifelse(id=="Door_attendant","Door attendant",id)) %>%
+  mutate(id = ifelse(id=="Flight_attendant","Flight attendant",id)) %>%
+  mutate(id = ifelse(id=="Garbage_Collector","Garbage collector",id)) %>%
+  mutate(id = ifelse(id=="Mail_Carrier","Mail carrier",id)) %>%
+  mutate(id = ifelse(id=="Maintenance_Person","Maintenance person",id)) %>%
+  mutate(id = ifelse(id=="Paper_carrier","Paper carrier",id))
 ```
 
 
@@ -82,12 +91,22 @@ underlying <- usable_trials %>%
 ```
 
 ```{r}
+text_high <- textGrob("Female", gp=gpar(fontsize=10, fontface="bold"))
+text_low <- textGrob("Male", gp=gpar(fontsize=10, fontface="bold"))
+```
+
+
+```{r}
 ggplot(underlying, aes(x=id, y=indi_mean, color=gender)) + 
   geom_point() + 
   theme_minimal() + 
   theme(axis.text.x = element_text(angle=45, hjust=1, size=8)) + 
   labs(x="Ungendered Lexical Item", y="Mean Rating", color = "Gender of Form", title="Mean Gender Rating by Ungendered Form and Gender Seen") + 
-  scale_color_manual(values = inauguration_2021)
+  scale_color_manual(values = inauguration_2021) + 
+  theme(plot.margin = unit(c(1,1,2,1), "lines")) +
+  annotation_custom(text_high,xmin=-1.3,xmax=-1.3,ymin=7,ymax=7) + 
+  annotation_custom(text_low,xmin=-1,xmax=-1,ymin=1,ymax=1) + 
+  coord_cartesian(clip = "off")
 ```
 ```{r}
 ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper",filename="norming_values.png")
@@ -153,7 +172,11 @@ ggplot(neutral_means, aes(x=neutral_morh, y=neutral_mean, color=gender, size=tri
   labs(title="Mean Gender Evaluation by Neutral-Form Derivation Process", x="Neutral Formation Process", y="Mean Rating", size="Number of Observations", color="Gender") + 
   scale_color_manual(values=inauguration_2021) + 
   scale_x_discrete(labels=c("Clipping", "Male Adoption", "Neutral Compound", "Person Compound", "Suppletion")) + 
-  theme(axis.text.x = element_text(angle=15))
+  theme(axis.text.x = element_text(angle=15)) + 
+  theme(plot.margin = unit(c(1,1,2,1), "lines")) +
+  annotation_custom(text_high,xmin=.3,xmax=0.3,ymin=6.6,ymax=6.6) + 
+  annotation_custom(text_low,xmin=.3,xmax=.3,ymin=2.4,ymax=2.4) + 
+  coord_cartesian(clip = "off")
 ```
 
 ```{r}
@@ -166,5 +189,8 @@ ggsave(height=4,width=7,path="/Users/branpap/Desktop/gender_processing/talks_and
 mean(underlying$trial_count)
 ```
 
+```{r}
+summary(trials)
+```
 
 
