please for the love of god

--- a/results/3_Production/production_analysis.Rmd
+++ b/results/3_Production/production_analysis.Rmd
@@ -34,7 +34,7 @@ theme_set(theme_minimal())
 # Data Read-In
 
 ```{r}
-all_data <- read.csv('merged_all.csv')
+all_data <- read.csv('merged_all_prod.csv')
 ```
 
 
